bugfix: sharing article should save it to list; move down the z-index of article actions

--- a/app/js/components/shared/article/styles.scss
+++ b/app/js/components/shared/article/styles.scss
@@ -155,7 +155,7 @@
     display: flex;
     margin-top: -3.6rem;
     position: absolute;
-    z-index: 100;
+    z-index: 1;
     width: 100%;
     justify-content: space-between;
     transform: translateY(3.6rem);
